--- a/bundle.css
+++ b/bundle.css
@@ -2007,11 +2007,13 @@ body {
     .media-template .contained-section .mdc-list .mdc-list-divider {
       display: inline-block;
       border: none;
-      padding-right: 150px; }
+      padding-right: 75px; }
     .media-template .contained-section .mdc-list .mdc-list-item {
       display: inline-block;
       height: auto;
-      padding: 0; }
+      padding: 0;
+      font-weight: 700;
+      margin-right: 3rem; }
 
 .media-template .header-section {
   display: none; }
