--- a/bundle.css
+++ b/bundle.css
@@ -287,218 +287,6 @@ svg.mdc-button__icon {
 .mdc-button--unelevated.mdc-ripple-upgraded {
   --mdc-ripple-fg-opacity: 0.24; }
 
-.mdc-card {
-  border-radius: 4px;
-  background-color: #F6F4F2;
-  /* @alternate */
-  background-color: var(--mdc-theme-surface, #F6F4F2);
-  box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
-  display: flex;
-  flex-direction: column;
-  box-sizing: border-box; }
-
-.mdc-card--outlined {
-  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.2), 0px 0px 0px 0px rgba(0, 0, 0, 0.14), 0px 0px 0px 0px rgba(0, 0, 0, 0.12);
-  border-width: 1px;
-  border-style: solid;
-  border-color: #d8d7d5; }
-
-.mdc-card__media {
-  position: relative;
-  box-sizing: border-box;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover; }
-  .mdc-card__media::before {
-    display: block;
-    content: ""; }
-
-.mdc-card__media:first-child {
-  border-top-left-radius: inherit;
-  border-top-right-radius: inherit; }
-
-.mdc-card__media:last-child {
-  border-bottom-left-radius: inherit;
-  border-bottom-right-radius: inherit; }
-
-.mdc-card__media--square::before {
-  margin-top: 100%; }
-
-.mdc-card__media--16-9::before {
-  margin-top: 56.25%; }
-
-.mdc-card__media-content {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  box-sizing: border-box; }
-
-.mdc-card__primary-action {
-  display: flex;
-  flex-direction: column;
-  box-sizing: border-box;
-  position: relative;
-  outline: none;
-  color: inherit;
-  text-decoration: none;
-  cursor: pointer;
-  overflow: hidden; }
-
-.mdc-card__primary-action:first-child {
-  border-top-left-radius: inherit;
-  border-top-right-radius: inherit; }
-
-.mdc-card__primary-action:last-child {
-  border-bottom-left-radius: inherit;
-  border-bottom-right-radius: inherit; }
-
-.mdc-card__actions {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  box-sizing: border-box;
-  min-height: 52px;
-  padding: 8px; }
-
-.mdc-card__actions--full-bleed {
-  padding: 0; }
-
-.mdc-card__action-buttons,
-.mdc-card__action-icons {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  box-sizing: border-box; }
-
-.mdc-card__action-icons {
-  color: rgba(0, 0, 0, 0.6);
-  flex-grow: 1;
-  justify-content: flex-end; }
-
-.mdc-card__action-buttons + .mdc-card__action-icons {
-  /* @noflip */
-  margin-left: 16px;
-  /* @noflip */
-  margin-right: 0; }
-  [dir="rtl"] .mdc-card__action-buttons + .mdc-card__action-icons, .mdc-card__action-buttons + .mdc-card__action-icons[dir="rtl"] {
-    /* @noflip */
-    margin-left: 0;
-    /* @noflip */
-    margin-right: 16px; }
-
-.mdc-card__action {
-  display: inline-flex;
-  flex-direction: row;
-  align-items: center;
-  box-sizing: border-box;
-  justify-content: center;
-  cursor: pointer;
-  user-select: none; }
-  .mdc-card__action:focus {
-    outline: none; }
-
-.mdc-card__action--button {
-  /* @noflip */
-  margin-left: 0;
-  /* @noflip */
-  margin-right: 8px;
-  padding: 0 8px; }
-  [dir="rtl"] .mdc-card__action--button, .mdc-card__action--button[dir="rtl"] {
-    /* @noflip */
-    margin-left: 8px;
-    /* @noflip */
-    margin-right: 0; }
-  .mdc-card__action--button:last-child {
-    /* @noflip */
-    margin-left: 0;
-    /* @noflip */
-    margin-right: 0; }
-    [dir="rtl"] .mdc-card__action--button:last-child, .mdc-card__action--button:last-child[dir="rtl"] {
-      /* @noflip */
-      margin-left: 0;
-      /* @noflip */
-      margin-right: 0; }
-
-.mdc-card__actions--full-bleed .mdc-card__action--button {
-  justify-content: space-between;
-  width: 100%;
-  height: auto;
-  max-height: none;
-  margin: 0;
-  padding: 8px 16px;
-  /* @noflip */
-  text-align: left; }
-  [dir="rtl"] .mdc-card__actions--full-bleed .mdc-card__action--button, .mdc-card__actions--full-bleed .mdc-card__action--button[dir="rtl"] {
-    /* @noflip */
-    text-align: right; }
-
-.mdc-card__action--icon {
-  margin: -6px 0;
-  padding: 12px; }
-
-.mdc-card__action--icon:not(:disabled) {
-  color: rgba(0, 0, 0, 0.6); }
-
-.mdc-card__primary-action {
-  --mdc-ripple-fg-size: 0;
-  --mdc-ripple-left: 0;
-  --mdc-ripple-top: 0;
-  --mdc-ripple-fg-scale: 1;
-  --mdc-ripple-fg-translate-end: 0;
-  --mdc-ripple-fg-translate-start: 0;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
-  .mdc-card__primary-action::before, .mdc-card__primary-action::after {
-    position: absolute;
-    border-radius: 50%;
-    opacity: 0;
-    pointer-events: none;
-    content: ""; }
-  .mdc-card__primary-action::before {
-    transition: opacity 15ms linear, background-color 15ms linear;
-    z-index: 1; }
-  .mdc-card__primary-action.mdc-ripple-upgraded::before {
-    transform: scale(var(--mdc-ripple-fg-scale, 1)); }
-  .mdc-card__primary-action.mdc-ripple-upgraded::after {
-    top: 0;
-    /* @noflip */
-    left: 0;
-    transform: scale(0);
-    transform-origin: center center; }
-  .mdc-card__primary-action.mdc-ripple-upgraded--unbounded::after {
-    top: var(--mdc-ripple-top, 0);
-    /* @noflip */
-    left: var(--mdc-ripple-left, 0); }
-  .mdc-card__primary-action.mdc-ripple-upgraded--foreground-activation::after {
-    animation: mdc-ripple-fg-radius-in 225ms forwards, mdc-ripple-fg-opacity-in 75ms forwards; }
-  .mdc-card__primary-action.mdc-ripple-upgraded--foreground-deactivation::after {
-    animation: mdc-ripple-fg-opacity-out 150ms;
-    transform: translate(var(--mdc-ripple-fg-translate-end, 0)) scale(var(--mdc-ripple-fg-scale, 1)); }
-  .mdc-card__primary-action::before, .mdc-card__primary-action::after {
-    top: calc(50% - 100%);
-    /* @noflip */
-    left: calc(50% - 100%);
-    width: 200%;
-    height: 200%; }
-  .mdc-card__primary-action.mdc-ripple-upgraded::after {
-    width: var(--mdc-ripple-fg-size, 100%);
-    height: var(--mdc-ripple-fg-size, 100%); }
-  .mdc-card__primary-action::before, .mdc-card__primary-action::after {
-    background-color: #000; }
-  .mdc-card__primary-action:hover::before {
-    opacity: 0.04; }
-  .mdc-card__primary-action:not(.mdc-ripple-upgraded):focus::before, .mdc-card__primary-action.mdc-ripple-upgraded--background-focused::before {
-    transition-duration: 75ms;
-    opacity: 0.12; }
-  .mdc-card__primary-action:not(.mdc-ripple-upgraded)::after {
-    transition: opacity 150ms linear; }
-  .mdc-card__primary-action:not(.mdc-ripple-upgraded):active::after {
-    transition-duration: 75ms;
-    opacity: 0.12; }
-  .mdc-card__primary-action.mdc-ripple-upgraded {
-    --mdc-ripple-fg-opacity: 0.12; }
-
 .mdc-chip__icon--leading {
   color: rgba(0, 0, 0, 0.54); }
 
@@ -1936,8 +1724,11 @@ body {
   .media-template .contained-section .mdc-list {
     padding: 0;
     color: #F6F4F2;
+    font-family: 'Manrope';
     font-size: 16px;
-    font-weight: 700; }
+    line-height: 19px;
+    letter-spacing: normal;
+    font-weight: 400; }
     .media-template .contained-section .mdc-list .mdc-list-item {
       display: inline-block;
       height: auto;
@@ -1947,6 +1738,8 @@ body {
       top: -20px; }
     .media-template .contained-section .mdc-list .mdc-list-item.logo {
       top: 13px; }
+    .media-template .contained-section .mdc-list a:hover {
+      text-decoration: underline; }
 
 .media-template .header-section {
   display: none; }
@@ -1996,6 +1789,13 @@ body {
 .media-template .mdc-button--raised {
   padding: 23px 60px; }
 
+.media-template .mdc-button--raised:hover {
+  background: #709D25; }
+
+.media-template .mdc-button--raised:active {
+  color: #8EBB43;
+  background: #fff; }
+
 .media-template .mdc-button--outlined {
   border-color: #F6F4F2;
   color: #F6F4F2; }
@@ -2014,6 +1814,7 @@ body {
   font-family: 'Montserrat';
   font-size: 20px;
   line-height: 120%;
+  font-weight: 700;
   margin: 1em 0; }
 
 .media-template .article,
@@ -2101,7 +1902,8 @@ body {
   padding-bottom: 3em; }
   .media-template .history label .mdc-button {
     margin-top: 0;
-    padding-right: 1em; }
+    padding-right: 1em;
+    font-weight: 400; }
   .media-template .history label span {
     float: inline-end;
     width: 70%; }
@@ -2128,16 +1930,7 @@ body {
   .media-template .themes li a.mdc-button {
     width: 318px;
     height: 70px;
-    background: #8EBB43;
-    border-radius: 10px;
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 120%;
-    bottom: -280px;
-    color: #F6F4F2;
-    text-transform: none; }
+    bottom: -280px; }
 
 .media-template .checks,
 .media-template .join {
@@ -2165,7 +1958,5 @@ body {
     height: 38px; }
   .media-template .footer a {
     color: #F6F4F2; }
-  .media-template .footer a.mdc-typography--headline4 {
-    text-decoration: underline; }
   .media-template .footer .imglink {
     text-decoration: none; }
